// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should not open overlay on icon-click when disabled 1`] = `
<div>
  <div>
    <label
      class="input default left disabled"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar icon default"
        />
      </div>
      <input
        disabled=""
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should not open overlay on icon-click when disabled 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should open overlay on icon-click 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should open overlay on icon-click 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt rdtOpen\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<div>
  <div class=\\"backdrop fixed\\"></div>
</div>"
`;

exports[`DatePicker should render 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render date format only with month 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MMMM"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render date format only with month 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtMonths\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"2\\" data-value=\\"2017\\">2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
              </thead>
            </table>
            <table>
              <tbody>
                <tr>
                  <td data-value=\\"0\\" class=\\"rdtMonth\\">Jan</td>
                  <td data-value=\\"1\\" class=\\"rdtMonth\\">Feb</td>
                  <td data-value=\\"2\\" class=\\"rdtMonth\\">Mar</td>
                  <td data-value=\\"3\\" class=\\"rdtMonth\\">Apr</td>
                </tr>
                <tr>
                  <td data-value=\\"4\\" class=\\"rdtMonth\\">May</td>
                  <td data-value=\\"5\\" class=\\"rdtMonth\\">Jun</td>
                  <td data-value=\\"6\\" class=\\"rdtMonth\\">Jul</td>
                  <td data-value=\\"7\\" class=\\"rdtMonth\\">Aug</td>
                </tr>
                <tr>
                  <td data-value=\\"8\\" class=\\"rdtMonth\\">Sep</td>
                  <td data-value=\\"9\\" class=\\"rdtMonth\\">Oct</td>
                  <td data-value=\\"10\\" class=\\"rdtMonth\\">Nov</td>
                  <td data-value=\\"11\\" class=\\"rdtMonth\\">Dec</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render date format only with year 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render date format only with year 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtYears\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"2\\">2010-2019</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
              </thead>
            </table>
            <table>
              <tbody>
                <tr>
                  <td data-value=\\"2009\\" class=\\"rdtYear\\">2009</td>
                  <td data-value=\\"2010\\" class=\\"rdtYear\\">2010</td>
                  <td data-value=\\"2011\\" class=\\"rdtYear\\">2011</td>
                  <td data-value=\\"2012\\" class=\\"rdtYear\\">2012</td>
                </tr>
                <tr>
                  <td data-value=\\"2013\\" class=\\"rdtYear\\">2013</td>
                  <td data-value=\\"2014\\" class=\\"rdtYear\\">2014</td>
                  <td data-value=\\"2015\\" class=\\"rdtYear\\">2015</td>
                  <td data-value=\\"2016\\" class=\\"rdtYear\\">2016</td>
                </tr>
                <tr>
                  <td data-value=\\"2017\\" class=\\"rdtYear\\">2017</td>
                  <td data-value=\\"2018\\" class=\\"rdtYear\\">2018</td>
                  <td data-value=\\"2019\\" class=\\"rdtYear\\">2019</td>
                  <td data-value=\\"2020\\" class=\\"rdtYear\\">2020</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render date picker with time picker 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY h:mm A"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render date picker with time picker 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
              <tfoot>
                <tr>
                  <td colspan=\\"7\\" class=\\"rdtTimeToggle\\">12:00 AM</td>
                </tr>
              </tfoot>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render error 1`] = `
<div>
  <div>
    <label
      class="input default left error"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render error 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render error when invalid value is set 1`] = `
<div>
  <div>
    <label
      class="input default left error"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="YYYY"
        type="text"
        value="xxx"
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render error when invalid value is set 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtYears\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"2\\">2010-2019</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
              </thead>
            </table>
            <table>
              <tbody>
                <tr>
                  <td data-value=\\"2009\\" class=\\"rdtYear\\">2009</td>
                  <td data-value=\\"2010\\" class=\\"rdtYear\\">2010</td>
                  <td data-value=\\"2011\\" class=\\"rdtYear\\">2011</td>
                  <td data-value=\\"2012\\" class=\\"rdtYear\\">2012</td>
                </tr>
                <tr>
                  <td data-value=\\"2013\\" class=\\"rdtYear\\">2013</td>
                  <td data-value=\\"2014\\" class=\\"rdtYear\\">2014</td>
                  <td data-value=\\"2015\\" class=\\"rdtYear\\">2015</td>
                  <td data-value=\\"2016\\" class=\\"rdtYear\\">2016</td>
                </tr>
                <tr>
                  <td data-value=\\"2017\\" class=\\"rdtYear\\">2017</td>
                  <td data-value=\\"2018\\" class=\\"rdtYear\\">2018</td>
                  <td data-value=\\"2019\\" class=\\"rdtYear\\">2019</td>
                  <td data-value=\\"2020\\" class=\\"rdtYear\\">2020</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render null value as empty string 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render null value as empty string 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render when disabled 1`] = `
<div>
  <div>
    <label
      class="input default left disabled"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar icon default"
        />
      </div>
      <input
        disabled=""
        placeholder="MM/DD/YYYY"
        type="text"
        value="05/23/2017"
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render when disabled 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"4\\">May 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                </tr>
                <tr>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                </tr>
                <tr>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay\\">15</td>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                </tr>
                <tr>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                  <td data-value=\\"23\\" class=\\"rdtDay rdtActive\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                </tr>
                <tr>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                </tr>
                <tr>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay rdtNew\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay rdtNew\\">8</td>
                  <td data-value=\\"9\\" class=\\"rdtDay rdtNew\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay rdtNew\\">10</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render with placeholder 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="My placeholder"
        type="text"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render with placeholder 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"3\\">April 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"26\\" class=\\"rdtDay rdtOld\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay rdtOld\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay rdtOld\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay rdtOld\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay rdtOld\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                </tr>
                <tr>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                </tr>
                <tr>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay rdtToday\\">15</td>
                </tr>
                <tr>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                </tr>
                <tr>
                  <td data-value=\\"23\\" class=\\"rdtDay\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                </tr>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`DatePicker should render with value 1`] = `
<div>
  <div>
    <label
      class="input default left"
    >
      <div
        class="prependedContainer default"
      >
        <span
          aria-label="su-calendar"
          class="su-calendar clickable icon default iconClickable"
          role="button"
          tabindex="0"
        />
      </div>
      <input
        placeholder="MM/DD/YYYY"
        type="text"
        value="05/23/2017"
      />
    </label>
  </div>
</div>
`;

exports[`DatePicker should render with value 2`] = `
"<div>
  <div class=\\"container\\">
    <div style=\\"top: 10px; left: 34px; position: fixed; pointer-events: auto;\\">
      <div class=\\"rdt\\">
        <div></div>
        <div class=\\"rdtPicker\\">
          <div class=\\"rdtDays\\">
            <table>
              <thead>
                <tr>
                  <th class=\\"rdtPrev\\"><span>‹</span></th>
                  <th class=\\"rdtSwitch\\" colspan=\\"5\\" data-value=\\"4\\">May 2017</th>
                  <th class=\\"rdtNext\\"><span>›</span></th>
                </tr>
                <tr>
                  <th class=\\"dow\\">Su</th>
                  <th class=\\"dow\\">Mo</th>
                  <th class=\\"dow\\">Tu</th>
                  <th class=\\"dow\\">We</th>
                  <th class=\\"dow\\">Th</th>
                  <th class=\\"dow\\">Fr</th>
                  <th class=\\"dow\\">Sa</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td data-value=\\"30\\" class=\\"rdtDay rdtOld\\">30</td>
                  <td data-value=\\"1\\" class=\\"rdtDay\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay\\">3</td>
                  <td data-value=\\"4\\" class=\\"rdtDay\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay\\">6</td>
                </tr>
                <tr>
                  <td data-value=\\"7\\" class=\\"rdtDay\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay\\">8</td>
                  <td data-value=\\"9\\" class=\\"rdtDay\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay\\">10</td>
                  <td data-value=\\"11\\" class=\\"rdtDay\\">11</td>
                  <td data-value=\\"12\\" class=\\"rdtDay\\">12</td>
                  <td data-value=\\"13\\" class=\\"rdtDay\\">13</td>
                </tr>
                <tr>
                  <td data-value=\\"14\\" class=\\"rdtDay\\">14</td>
                  <td data-value=\\"15\\" class=\\"rdtDay\\">15</td>
                  <td data-value=\\"16\\" class=\\"rdtDay\\">16</td>
                  <td data-value=\\"17\\" class=\\"rdtDay\\">17</td>
                  <td data-value=\\"18\\" class=\\"rdtDay\\">18</td>
                  <td data-value=\\"19\\" class=\\"rdtDay\\">19</td>
                  <td data-value=\\"20\\" class=\\"rdtDay\\">20</td>
                </tr>
                <tr>
                  <td data-value=\\"21\\" class=\\"rdtDay\\">21</td>
                  <td data-value=\\"22\\" class=\\"rdtDay\\">22</td>
                  <td data-value=\\"23\\" class=\\"rdtDay rdtActive\\">23</td>
                  <td data-value=\\"24\\" class=\\"rdtDay\\">24</td>
                  <td data-value=\\"25\\" class=\\"rdtDay\\">25</td>
                  <td data-value=\\"26\\" class=\\"rdtDay\\">26</td>
                  <td data-value=\\"27\\" class=\\"rdtDay\\">27</td>
                </tr>
                <tr>
                  <td data-value=\\"28\\" class=\\"rdtDay\\">28</td>
                  <td data-value=\\"29\\" class=\\"rdtDay\\">29</td>
                  <td data-value=\\"30\\" class=\\"rdtDay\\">30</td>
                  <td data-value=\\"31\\" class=\\"rdtDay\\">31</td>
                  <td data-value=\\"1\\" class=\\"rdtDay rdtNew\\">1</td>
                  <td data-value=\\"2\\" class=\\"rdtDay rdtNew\\">2</td>
                  <td data-value=\\"3\\" class=\\"rdtDay rdtNew\\">3</td>
                </tr>
                <tr>
                  <td data-value=\\"4\\" class=\\"rdtDay rdtNew\\">4</td>
                  <td data-value=\\"5\\" class=\\"rdtDay rdtNew\\">5</td>
                  <td data-value=\\"6\\" class=\\"rdtDay rdtNew\\">6</td>
                  <td data-value=\\"7\\" class=\\"rdtDay rdtNew\\">7</td>
                  <td data-value=\\"8\\" class=\\"rdtDay rdtNew\\">8</td>
                  <td data-value=\\"9\\" class=\\"rdtDay rdtNew\\">9</td>
                  <td data-value=\\"10\\" class=\\"rdtDay rdtNew\\">10</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
